changed network type to host-gw and added new container argument         - --iface=enp0s8

--- a/flannel.yaml
+++ b/flannel.yaml
@@ -90,7 +90,7 @@ data:
     {
       "Network": "192.168.0.0/16",
       "Backend": {
-        "Type": "vxlan"
+        "Type": "host-gw"
       }
     }
 kind: ConfigMap
@@ -136,6 +136,7 @@ spec:
       - args:
         - --ip-masq
         - --kube-subnet-mgr
+        - --iface=enp0s8
         command:
         - /opt/bin/flanneld
         env:
